bizinikiwi/pezframe/support/test/tests/pezpallet_ui/storage_invalid_attribute.stderr
error: expected one of: `getter`, `storage_prefix`, `unbounded`, `whitelist_storage`, `disable_try_decode_storage`
  --> tests/pezpallet_ui/storage_invalid_attribute.rs:33:15
   |
33 |     #[pezpallet::generate_store(pub trait Store)]
   |                  ^^^^^^^^^^^^^^
